--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white bg-grid-subtle">
     <div id="root"></div>
+    <!-- Entry point for the application -->
+    <script type="module" src="index.tsx"></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
